# chad-os

./: Cargo.toml  x86_64-chad-os.json
.cargo/: config.toml
src/: main.rs  vga_buffer.rs
